--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,3 +1,5 @@
+
+/*Importar fuentes curtom*/
 @font-face{
 	font-family: "yanone";
 	src: url("/fonts/yanone.ttf");
@@ -8,6 +10,17 @@
 	src: url("fonts/finger.ttf");
 }
 
+/*Generales*/
+
+*{
+	margin: 0px;
+	padding: 0px;
+}
+
+
 body{
 	font-family: "yanone", Arial, Helvetica;
+	font-size: 20px;
+	background: url("../img/pattern.png");
+	position: fixed;
 }
