--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -2,7 +2,7 @@
 /*Importar fuentes curtom*/
 @font-face{
 	font-family: "yanone";
-	src: url("/fonts/yanone.ttf");
+	src: url("fonts/yanone.ttf");
 }
 
 @font-face{
@@ -43,16 +43,17 @@ header{
 
 header ul{
 	display: block;
-	width: 750px;
+	width: 39%;
 	height: inherit;
 	margin: 0px auto;
+	margin-top: -3px;
 }
 
 header ul li{
 	display: inline-block;
 	margin: 0px auto;
 	text-align: center;
-	line-height: 90px;
+	line-height: 88px;
 }
 
 header a{
@@ -70,6 +71,20 @@ header a:hover{
 
 }
 
-header #logo a:hover{
+/*Logo tipo*/
+
+#logo{
+	font-family: "finger";
+	font-size: 30px;
+}
+
+#logo a{
+	transition: color 500ms, transform 500ms;
+}
+
+#logo a:hover{
 	background:  transparent;
+	color: black;
+	transform: scale(1.50);
+
 }
