--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -85,6 +85,17 @@ header a:hover{
 #logo a:hover{
 	background:  transparent;
 	color: black;
-	transform: scale(1.50);
+	transform: scale(1.50,1.50);
 
+}
+
+/* Contenedor principal */
+#content{
+	min-height: 500px;
+	width:  75%;
+	margin: 0px auto;
+	box-shadow: 0px 0px 40px black;
+	border-left: 1px solid #b7b7b7;
+	background: rgba(255, 255, 255, 0.7);
+	padding-top:  120px;
 }
