--- a/src/app/components/create/create.component.html
+++ b/src/app/components/create/create.component.html
@@ -4,35 +4,48 @@
 	<form #projectForm="ngForm" (ngSubmit)="onSubmit(projectForm)">
 		<p>
 			<label for="name">Nombre</label>
-			<input type="text" name="name" #name="ngModel" [(ngModel)]="project.name"/>
+			<input type="text" name="name" #name="ngModel" [(ngModel)]="project.name" required />
+			<span class="form_error" *ngIf="name.touched && !name.valid">
+				El nombre es obligatorio 
+			</span>
 		</p>
 
 		<p>
 			<label for="descripcion">Descripcion</label>
-			<textarea name="descripcion" #descripcion="ngModel" [(ngModel)]="project.descripcion"></textarea> 
+			<textarea name="descripcion" #descripcion="ngModel" [(ngModel)]="project.descripcion" required></textarea>
+			<span class="form_error" *ngIf="descripcion.touched && !descripcion.valid">
+				La descripcion es obligatoria
+			</span> 
 		</p>
 
 		<p>
 			<label for="category">Categoria</label>
-			<input type="text" name="category" #name="ngModel" [(ngModel)]="project.category"/>
+			<input type="text" name="category" #category="ngModel" [(ngModel)]="project.category" required/>
+			<span class="form_error" *ngIf="category.touched && !category.valid">
+				La categoria es obligatoria
+			</span>
 		</p>
 
 		<p>
 			<label for="year">Año de lanzamiento</label>
-			<input type="number" name="year" #year="ngModel" [(ngModel)]="project.year"/>
+			<input type="number" name="year" #year="ngModel" [(ngModel)]="project.year" required/>
+
 		</p>
 
 		
 		<p>
 			<label for="category">Lenguajes utilizados</label>
-			<input type="text" name="langs" #langs="ngModel" [(ngModel)]="project.langs"/>
+			<input type="text" name="langs" #langs="ngModel" [(ngModel)]="project.langs" required/>
+			<span class="form_error" *ngIf="langs.touched && !langs.valid">
+				Los lenguajes son obligatorios
+			</span>
 		</p>
 
 		<p>
 			<label for="image">Imagen del proyecto</label>
-			<input type="file" name="image" placeholder="Subir Imagen"/>
+			<input type="file" name="image" placeholder="Subir Imagen" required/>
 		</p>
 
-		<input type="submit" value="Enviar">
+		<input type="submit" value="Enviar" [disabled]="!projectForm.form.valid">
 	</form>
 </div>
