Upload images of the projects

--- a/src/app/components/create/create.component.html
+++ b/src/app/components/create/create.component.html
@@ -53,7 +53,7 @@
 
 		<p>
 			<label for="image">Imagen del proyecto</label>
-			<input type="file" name="image" placeholder="Subir Imagen" required/>
+			<input type="file" name="image" placeholder="Subir Imagen" (change)="fileChangeEvent($event)"/>
 		</p>
 
 		<input type="submit" value="Enviar" [disabled]="!projectForm.form.valid">
