--- a/src/app/components/proyects/proyects.component.html
+++ b/src/app/components/proyects/proyects.component.html
@@ -1,1 +1,12 @@
-<p>proyects works!</p>
+<div class="container">
+	<h2>Proyectos</h2>
+	<ul>
+		<li *ngFor="let project of projects" class="project">
+			<div class="image">
+			<img src="{{url+'get-image/'+project.image}}" *ngIf="project.image" width="200" height="200" />
+			</div>
+			<h3>{{project.name}}</h3>
+			<p>{{project.category}}</p>
+	</li>
+	</ul>
+</div>
