--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -92,7 +92,8 @@ header a:hover,
 
 /* Contenedor principal */
 #content{
-	min-height: 500px;
+	min-height: 600px;
+	height:  auto;
 	width:  75%;
 	margin: 0px auto;
 	box-shadow: 0px 0px 40px black;
@@ -239,4 +240,28 @@ form input[disabled]{
 .failed{
 	background: red;
 	color: white;
+}
+
+/*Paginas de proyectos*/
+
+.project{
+	list-style: none;
+	display: block;
+	float: left;
+	width: 28%;
+	text-align: center;
+	margin-left: 20px;
+	margin-right: 20px;
+	margin-bottom: 30px;
+}
+
+.project .image{
+	width: 100%;
+	height: 150px;
+	overflow: hidden;
+}
+
+.project img{
+	width: 100%;
+
 }
