--- a/src/app/components/proyects/proyects.component.html
+++ b/src/app/components/proyects/proyects.component.html
@@ -2,11 +2,13 @@
 	<h2>Proyectos</h2>
 	<ul>
 		<li *ngFor="let project of projects" class="project">
-			<div class="image">
-			<img src="{{url+'get-image/'+project.image}}" *ngIf="project.image" width="200" height="200" />
-			</div>
-			<h3>{{project.name}}</h3>
-			<p>{{project.category}}</p>
+			<a [routerLink]="['/proyecto',project._id]">
+				<div class="image">
+				<img src="{{url+'get-image/'+project.image}}" *ngIf="project.image" width="200" height="200" />
+				</div>
+				<h3>{{project.name}}</h3>
+				<p>{{project.category}}</p>
+			</a>
 	</li>
 	</ul>
 </div>
