--- a/src/app/components/create/create.component.html
+++ b/src/app/components/create/create.component.html
@@ -53,6 +53,9 @@
 
 		<p>
 			<label for="image">Imagen del proyecto</label>
+			<span class="image" *ngIf="project.image" style="float: none;">
+					<img src="{{url+'get-image/'+project.image}}"  style="width: 100px;" />
+			</span><br>
 			<input type="file" name="image" placeholder="Subir Imagen" (change)="fileChangeEvent($event)"/>
 		</p>
 
