--- a/src/app/components/detail/detail.component.html
+++ b/src/app/components/detail/detail.component.html
@@ -1,7 +1,8 @@
-<div class="container">
-	
+<!--div class="container" *ngIf="project"-->
+<div class="container" >	
 
-	<div class="image">
+	<!--div class="image" *ngIf="project.image"-->
+	<div class="image" >
 			<img src="{{url+'get-image/'+project.image}}"  width="200" height="200"/>
 	</div>
 	<div class="data">
@@ -10,7 +11,7 @@
 		<p>{{project.category}}</p>
 		<p>{{project.langs}}</p>
 		<p>
-			<a href="#" class="button-edit">Editar</a>
+			<a href="/editar-proyecto/{{project._id}}" class="button-edit" >Editar</a>
 			<a (click)="deleteProject(project._id)"  class="button-delete">Borrar</a>
 		</p>
 	</div>
